Put my name and intro to who I am

--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : Your Name
+title                    : Mathis Vigneau
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : Your Name
-description              : Your Name - Projects and CV 
+name                     : Mathis Vigneau
+description              : Mathis Vigneau - Projects and CV 
 baseurl                  : "" # Set this to your repo name 
 
 # Theme and Style
